# rural-school-risk-ml

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
.streamlit/: config.toml
app/: app.py
data/: README.md
data/demo/: earthquake.csv  flood.csv  landslide.csv  windstorm.csv
models/: earthquake_card.json  earthquake_model.pkl  flood_card.json  flood_model.pkl  landslide_card.json  landslide_model.pkl  windstorm_card.json  windstorm_model.pkl
notebooks/: 01_data_overview.ipynb  02_model_training_and_selection.ipynb  03_model_interpretability_shap.ipynb  04_scenario_simulation.ipynb
reports/metrics/: earthquake_cv_comparison.csv  earthquake_holdout_report.csv  earthquake_shap_contribution.csv  flood_cv_comparison.csv  flood_holdout_report.csv  flood_shap_contribution.csv  landslide_cv_comparison.csv  landslide_holdout_report.csv  landslide_shap_contribution.csv  summary.json  windstorm_cv_comparison.csv  windstorm_holdout_report.csv  windstorm_shap_contribution.csv
scripts/: generate_demo_data.py  make_pipeline_diagram.py  train_models.py
src/schoolrisk/: __init__.py  config.py  data.py  explain.py  modeling.py  plots.py  simulate.py
tests/: test_config.py  test_data.py  test_models.py  test_pipeline.py  test_simulate.py
