[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "schoolrisk"
version = "1.0.0"
description = "Interpretable machine learning for multihazard risk screening of rural school buildings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alexey David Velasquez Betancurt" }]
keywords = [
    "machine learning",
    "risk assessment",
    "structural engineering",
    "shap",
    "multiclass classification",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.6,<1.8",
    "lightgbm>=4.3",
    "shap>=0.46",
    "matplotlib>=3.8",
    "joblib>=1.3",
]

[project.optional-dependencies]
app = ["streamlit>=1.33"]
dev = ["pytest>=8.0", "jupyter", "nbconvert", "nbformat"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
